# wxTetris

./: .clang-format  .gitmodules  CMakeLists.txt  Findexternpro.cmake  LICENSE  README.md  Tetris.cpp  Tetris.hpp
.devcontainer/: centos7-bld.dockerfile
cmake/: CMakeLists.txt  Findexternpro.cmake
src/: App.cpp  Tetris.cpp  Tetris.hpp  dummy.cpp
