cmake_minimum_required(VERSION 3.12)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
include(preproject)
project(wxTetris)
set(externpro_REV 18.11.1)
find_package(externpro REQUIRED)
xpSetFlags()
set(exe_srcs App.cpp Tetris.cpp Tetris.hpp)
list(APPEND exe_srcs LICENSE Findexternpro.cmake preproject.cmake)
add_executable(${PROJECT_NAME} WIN32 ${exe_srcs})
xpTargetExtern(${PROJECT_NAME} PRIVATE wxWidgets)
xpSourceListAppend("${exe_srcs}")
