cmake_minimum_required(VERSION 3.21)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR})
include(preproject)
project(wxTetris)
set(externpro_REV 21.05)
find_package(externpro REQUIRED)
xpSetFlags()
set(exe_srcs App.cpp Tetris.cpp Tetris.hpp)
list(APPEND exe_srcs LICENSE Findexternpro.cmake preproject.cmake)
add_executable(${PROJECT_NAME} WIN32 ${exe_srcs})
xpFindPkg(PKGS wxwidgets)
target_link_libraries(${PROJECT_NAME} PRIVATE wx::core)
xpSourceListAppend("${exe_srcs}")
