cmake_minimum_required(VERSION 3.21)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
include(preproject)
project(wxTetris)
set(externpro_REV 21.05)
find_package(externpro REQUIRED)
xpSetFlags()
add_subdirectory(cmake)
set(exe_srcs src/App.cpp src/Tetris.cpp src/Tetris.hpp src/dummy.cpp LICENSE)
add_executable(${PROJECT_NAME} WIN32 ${exe_srcs})
xpFindPkg(PKGS wxwidgets wxx)
target_link_libraries(${PROJECT_NAME} PRIVATE wx::core wxx::things)
xpSourceListAppend("${exe_srcs}")
